src/assets/scss/templates/_page-what-we-do.scss
.page-work {

  &__hero {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-position: center;
    background-size: cover;

    &__title {
      text-align: center;
      color: $offWhite;
    }
    &__image {
      display: none;
    }
    &__down-chevron {
      position: absolute;
      bottom: 40px;
      width: 100%;
      height: 50px;
      display: flex;
      justify-content: center;

      svg {
        width: 100px;
        height: 50px;
      }
    }
  }
  &__intro {
    padding: 50px 6.25%;

    &__title {
      color: $marshPassion;
      text-align: center;
    }
    &__rule {
      border: 2px solid $mare;
      width: 120px;
      margin: 30px auto;
    }
    &__para {
      text-align: center;
    }
  }
  &__list {
    list-style: none;
    padding: 0;
    margin: 0;
  }

  @include susy-breakpoint($bp-medium, $susy) {
    &__hero {

      &__title {
        max-width: 850px;
      }
      &__image {
      }
    }
    &__intro {
      padding-top: 100px;
      padding-bottom: 100px;

      &__title {
        max-width: 768px;
        margin-left: auto;
        margin-right: auto;
      }
      &__rule {
        width: 180px;
      }
      &__para {
        max-width: 620px;
        margin-left: auto;
        margin-right: auto;
      }
    }
    &__list {
    }
  }
  @include susy-breakpoint($bp-large, $susy) {

  }
}
.iPhone .page-work__hero {
  min-height: calc(100vh - 69px);
}

